--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     </section>
     <section id="about">
         <div>
-            <img src="images/about.png" alt="About Image">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdepositphotos.com%2Fphoto%2Fa-group-of-three-black-men-in-stylish-suits-a-meeting-in-a-summer-park-311340778.html&psig=AOvVaw0HvFUYl6bJ8d6uXBY5E986&ust=1732507887580000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJCn2J-N9IkDFQAAAAAdAAAAABAI" alt="About Image">
         </div>
         <div>
             <h1>We are the best in our field</h1>
-            <p>For the last 5 years we always give the best to our client and we will always be the best</p>
+            <p>we always giving the best tikus for all client whoever white or black</p>
             <div class="about-stats">
                 <div class="about-stats-item">
                     <h1>100+</h1>
                     <div></div>
-                    <p>Experts</p>
+                    <p>Tikus</p>
                 </div>
                 <div class="about-stats-item">
                     <h1>300+</h1>
@@ -53,7 +53,7 @@
                 <div class="about-stats-item">
                     <h1>500+</h1>
                     <div></div>
-                    <p>Projects</p>
+                    <p>Wawa</p>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
         <div class="service-header">
             <div>
                 <h1>Our Servicee</h1>
-                <p>We have the best service to solve your problem</p>
+                <p>We have the best service tikus wawa</p>
             </div>
             <a href="" class="btn">Contact Us</a>
         </div>
@@ -123,7 +123,7 @@
     <footer id="footer">
         <div>
             <h1>Coder</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, sint?</p>
+            <p>Dengan bangga kami melayani klien dengan tikus tikus premium</p>
         </div>
         <div class="social-icon">
             <img src="images/Facebook.svg" alt="">
