--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
     <footer id="footer">
         <div>
-            <h1>Coder</h1>
+            <h1>AHLI MERPATI</h1>
             <p>Dengan bangga kami melayani klien dengan tikus tikus premium</p>
         </div>
         <div class="social-icon">
